<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.monst</groupId>
	<artifactId>BankingPlugin</artifactId>
	<version>1.1.5-SNAPSHOT</version>

	<name>BankingPlugin</name>
	<description>Create bank accounts in bank vault chests and earn interest on your investments!</description>

	<properties>
		<!-- Encoding Properties -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.build.outputEncoding>UTF-8</project.build.outputEncoding>

		<!-- JDK Version -->
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<repositories>
    	<repository>
        	<id>spigot-repo</id> <!-- Spigot -->
        	<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
  		<repository>
			<id>jitpack.io</id> <!-- Vault -->
			<url>https://jitpack.io</url>
		</repository>
		<repository>
        	<id>enginehub-maven</id> <!-- WorldEdit -->
        	<url>https://maven.enginehub.org/repo/</url>
    	</repository>
		<repository>
			<id>ess-repo</id> <!-- Essentials -->
			<url>https://ci.ender.zone/plugin/repository/everything/</url>
		</repository>
        <repository>
            <id>codemc-repo</id> <!-- WorldGuardWrapper -->
            <url>https://repo.codemc.org/repository/maven-public/</url>
        </repository>
	</repositories>

	<dependencies>
		<dependency>
           	<groupId>org.spigotmc</groupId>
           	<artifactId>spigot-api</artifactId>
           	<version>1.15.2-R0.1-SNAPSHOT</version>
           	<scope>provided</scope>
       	</dependency>
		<dependency>
			<groupId>net.milkbowl.vault</groupId>
			<artifactId>VaultAPI</artifactId>
			<version>1.7</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.github.TechFortress</groupId>
			<artifactId>GriefPrevention</artifactId>
			<version>16.13.0</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>org.bukkit</groupId>
					<artifactId>bukkit</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.sk89q.worldedit</groupId>
			<artifactId>worldedit-bukkit</artifactId>
			<version>7.1.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.ess3</groupId>
			<artifactId>EssentialsX</artifactId>
			<version>2.17.2</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>org.bukkit</groupId>
					<artifactId>bukkit</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		
		<!-- Shaded dependencies -->
		<dependency>
			<groupId>org.codemc.worldguardwrapper</groupId>
			<artifactId>worldguardwrapper</artifactId>
			<version>1.1.8-SNAPSHOT</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>3.4.5</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-jdk14</artifactId>
			<version>1.7.30</version>
			<scope>compile</scope>
		</dependency>
	</dependencies>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<finalName>BankingPlugin</finalName>
		<resources>
			<resource>
				<directory>resources</directory>
				<targetPath>.</targetPath>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.4</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<createDependencyReducedPom>false</createDependencyReducedPom>
					<artifactSet>
						<includes>
							<include>com.zaxxer:HikariCP</include>
							<include>org.codemc.worldguardwrapper:worldguardwrapper</include>
							<include>org.slf4j</include>
						</includes>
					</artifactSet>
					<relocations>
						<relocation>
							<pattern>com.zaxxer.hikari</pattern>
							<shadedPattern>com.monst.bankingplugin.dependencies.hikari</shadedPattern>
						</relocation>
						<relocation>
							<pattern>org.codemc.worldguardwrapper</pattern>
							<shadedPattern>com.monst.bankingplugin.dependencies.worldguardwrapper</shadedPattern>
						</relocation>
						<relocation>
							<pattern>org.slf4j</pattern>
							<shadedPattern>com.monst.bankingplugin.dependencies.slf4j</shadedPattern>
						</relocation>
					</relocations>
					<filters>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>META-INF/*.MF</exclude>
							</excludes>
						</filter>
					</filters>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>